[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio       = { version = "1", features = ["full"] }
clap        = { version = "4", features = ["derive"] }
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64        = "0.22"
hex           = "0.4"
chrono        = "0.4"
bcs           = "0.1"
futures       = "0.3"
sui-keys      = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
sui-types     = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
sui-sdk          = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui-config       = { git = "https://github.com/mystenlabs/sui", package = "sui-config" }
move-core-types  = { git = "https://github.com/mystenlabs/sui", package = "move-core-types" }
