[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio      = { version = "1", features = ["full"] }
clap       = { version = "4", features = ["derive"] }
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64     = "0.22"
chrono     = "0.4"
bcs        = "0.1"
futures    = "0.3"
ipnet      = "2"
dirs       = "5"

# sui-rust-sdk — new modular SDK
sui-sdk-types           = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-sdk-types",           features = ["hash"] }
sui-crypto              = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-crypto",              features = ["ed25519", "secp256k1", "secp256r1"] }
sui-rpc                 = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-rpc" }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", package = "sui-transaction-builder", features = ["intents"] }
